# CatalystEngine

./: CMakeLists.txt  main.c
Animation/: Animation.c  Animation.h
Entites/: EntityTextures.h  Player.c  Player.h
Entites/Flags/: Flags.h
Flags/: Flags.h
Input/: KeyboardInput.c  KeyboardInput.h
